chore: create documentation files and issue templates